src/test/deca/syntax/invalid/renduInter01/08EXCLAM_binary.deca
// Description:
//    tests de programme incorrect lexicalement (expression "not" est une expression binaire => symbole '!' non attendu)
//
// Resultats:
//    Ligne 10 : symbole '!' inattendu

{
    int x = 1;
    int y = 2;
    if ( y !x) {
        println("ok");
    } else {
        print("erreur");
    }
}
